--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -72,14 +72,14 @@
 .author__avatar {
   display: table-cell;
   vertical-align: top;
-  width: 60px;
+  width: 36px;
   // set width only, for non-square avatars
-  height: 36px;
+  //height: 36px;
 
   @include breakpoint($large) {
     display: block;
-    width: auto;
-    height: auto;
+    width: 36px;
+    height: 36px;
   }
 
   img {
