--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -78,8 +78,8 @@
 
   @include breakpoint($large) {
     display: block;
-    width: 36px;
-    height: 36px;
+    width: auto;
+    height: auto;
   }
 
   img {
