--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -84,8 +84,8 @@
 
   img {
     max-width: 175px;
-    border-radius: 1000%;
-
+    //border-radius: 1000%;
+      border-radius: initial
     @include breakpoint($large) {
       padding: 5px;
       border: 1px solid $border-color;
