--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -85,7 +85,7 @@
   img {
     max-width: 175px;
     //border-radius: 1000%;
-      border-radius: initial
+      border-radius: initial;
     @include breakpoint($large) {
       padding: 5px;
       border: 1px solid $border-color;
